Derp. Global gitignore is nice to have.

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 	status = auto
 	branch = auto
 [core]
-    excludesfile = /Users/daniellindsley/.gitignore
+	excludesfile = /Users/daniel/.gitignore
 [alias]
     st = status
     co = checkout
