--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,2 +1,5 @@
 [global]
 index-url = http://simple.crate.io/
+use-wheel = True
+wheel-dir = /Users/lindsley/.pip/wheels
+find-links = /Users/lindsley/.pip/wheels
