--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,9 @@
 *.pyc
 *.pyo
 __pycache__
-.ipython/db
-.ipython/history
-.ipython/IPython_crash_report.txt
-.ipython/profile_default/db
-.ipython/profile_default/log
-.ipython/profile_default/pid
-.ipython/profile_default/security
-.ipython/profile_default/history.sqlite
-.pip/pip.log
-.pip/build
+.ipython
+.pip
+.mypy_cache
 *.egg-info
 env
 env2
