--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-set bell-action none
+set -g bell-action none
 set-option -g status-left ""
 set-option -g status-right "#S"
 set -g status-bg black
