A bit friendlier & better contained Zsh bits.

--- a/VS-Code/settings.json
+++ b/VS-Code/settings.json
@@ -33,9 +33,9 @@
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
-    "python.linting.flake8Path": "/Users/daniellindsley/Library/Python/3.7/bin/flake8",
-    "python.linting.pep8Enabled": true,
-    "python.linting.pep8Path": "/Users/daniellindsley/Library/Python/3.7/bin/pep8",
+    "python.linting.flake8Path": "/Users/daniel/Library/Python/3.7/bin/flake8",
+    "python.linting.pycodestyleEnabled": true,
+    "python.linting.pycodestylePath": "/Users/daniel/Library/Python/3.7/bin/pep8",
     "python.linting.mypyEnabled": true,
     "python.linting.mypyPath": "/Users/daniel/Library/Python/3.7/bin/mypy",
     "python.linting.mypyArgs": [
@@ -73,7 +73,7 @@
     "window.restoreWindows": "all",
     "window.newWindowDimensions": "inherit",
     "explorer.confirmDelete": false,
-    "python.linting.pep8Path": "/usr/local/bin/pep8",
+    "python.linting.pycodestylePath": "/usr/local/bin/pep8",
     "editor.renderIndentGuides": false,
     "files.insertFinalNewline": false,
     "editor.scrollBeyondLastLine": true,
