Updated the ignore & spellings.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ zsh-configs/.zcompdump
 zsh-configs/.zsh_history
 
 fish-configs/fish_variables
+
+ST4/User/My Twilight.sublime-color-scheme
+ST4/User/Sisyphus.sublime-color-scheme
