--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,30 @@
+set -g default-terminal "screen-256color"
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
+set -g mouse on
+
 set -g bell-action none
 set-option -g status-left ""
 set-option -g status-right "#S"
+set -g visual-activity on
 set -g status-bg black
 set -g status-fg white
 setw -g mode-keys vi
 setw -g main-pane-width 125
+set -g copy-command "pbcopy"
 
 bind ^t last-window
+bind r source-file /Users/daniel/.tmux.conf \\; display "Reloaded!"
+
+bind C-p paste-buffer
+
+bind -T copy-mode-vi M-Up send-keys -X scroll-up
+bind -T copy-mode-vi M-Down send-keys -X scroll-down
+bind -T copy-mode-vi M-PageUp send-keys -X halfpage-up
+bind -T copy-mode-vi M-PageDown send-keys -X halfpage-down
+bind -T copy-mode-vi PageDown send-keys -X page-down
+bind -T copy-mode-vi PageUp send-keys -X page-up
+
+unbind -n MouseDown3Pane
