--- a/kitty-configs/kitty.conf
+++ b/kitty-configs/kitty.conf
@@ -668,7 +668,7 @@ copy_on_select clipboard
 # initial_window_width  640
 # initial_window_height 400
 
-remember_window_size    yes
+remember_window_size    no
 initial_window_width    800
 initial_window_height   600
 
