--- a/kitty-configs/kitty.conf
+++ b/kitty-configs/kitty.conf
@@ -363,7 +363,7 @@ copy_on_select clipboard
 #: programs, including websites open in your browser can read the
 #: contents of the system clipboard.
 
-# paste_actions quote-urls-at-prompt
+paste_actions filter
 
 #: A comma separated list of actions to take when pasting text into
 #: the terminal. The supported paste actions are:
