Disabled the tmux config reload bind.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,7 @@ setw -g main-pane-width 125
 set -g copy-command "pbcopy"
 
 bind ^t last-window
-bind r source-file /Users/daniel/.tmux.conf \\; display "Reloaded!"
+# bind r source-file /Users/daniel/.tmux.conf \\; display "Reloaded!"
 
 bind C-p paste-buffer
 
