More scrollback in tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,9 @@ setw -g mode-keys vi
 setw -g main-pane-width 125
 set -g copy-command "pbcopy"
 
+# More lines of scrollback, please.
+set -g history-limit 50000
+
 bind ^t last-window
 # bind r source-file /Users/daniel/.tmux.conf \\; display "Reloaded!"
 
