--- a/goose/config.yaml
+++ b/goose/config.yaml
@@ -1,5 +1,11 @@
-GOOSE_PROVIDER: anthropic
-GOOSE_MODEL: claude-sonnet-4-0
+GOOSE_PROVIDER: ollama
+GOOSE_MODEL: qwen3
+OLLAMA_HOST: http://localhost:11434
+ANTHROPIC_HOST: https://api.anthropic.com
+GOOSE_DISABLE_KEYRING: true
+GOOSE_TELEMETRY_ENABLED: true
+# GOOSE_PROMPT_EDITOR: "zed --wait"
+GOOSE_TERMINAL: 1
 extensions:
   computercontroller:
     enabled: true
@@ -23,7 +29,8 @@ extensions:
     enabled: true
     type: platform
     name: todo
-    description: Enable a todo list for Goose so it can keep track of what it is doing
+    description: Enable a todo list for goose so it can keep track of what it is doing
+    display_name: Todo
     bundled: true
     available_tools: []
   chatrecall:
@@ -31,13 +38,46 @@ extensions:
     type: platform
     name: chatrecall
     description: Search past conversations and load session summaries for contextual memory
+    display_name: Chat Recall
     bundled: true
     available_tools: []
   extensionmanager:
-    enabled: true
+    enabled: false
     type: platform
     name: Extension Manager
     description: Enable extension management tools for discovering, enabling, and disabling extensions
+    display_name: Extension Manager
     bundled: true
     available_tools: []
-ANTHROPIC_HOST: https://api.anthropic.com
+  apps:
+    enabled: false
+    type: platform
+    name: apps
+    description: Create and manage custom Goose apps through chat. Apps are HTML/CSS/JavaScript and run in sandboxed windows.
+    display_name: Apps
+    bundled: true
+    available_tools: []
+  skills:
+    enabled: true
+    type: platform
+    name: skills
+    description: Load and use skills from relevant directories
+    display_name: Skills
+    bundled: true
+    available_tools: []
+  code_execution:
+    enabled: false
+    type: platform
+    name: code_execution
+    description: Goose will make extension calls through code execution, saving tokens
+    display_name: Code Mode
+    bundled: true
+    available_tools: []
+  tom:
+    enabled: false
+    type: platform
+    name: tom
+    description: Inject custom context into every turn via GOOSE_MOIM_MESSAGE_TEXT and GOOSE_MOIM_MESSAGE_FILE environment variables
+    display_name: Top Of Mind
+    bundled: true
+    available_tools: []
