--- a/goose/permission.yaml
+++ b/goose/permission.yaml
@@ -3,5 +3,7 @@ user:
   - developer__shell
   - todo__todo_write
   - developer__text_editor
+  - computercontroller__cache
+  - computercontroller__web_scrape
   ask_before: []
   never_allow: []
